Closed
Bug 1579009
Opened 6 years ago
Closed 6 years ago
XPCWrappedNative.cpp _LITTLE_ENDIAN collision on Solaris
Categories
(Core :: XPConnect, defect)
Tracking
()
RESOLVED
FIXED
mozilla71
| Tracking | Status | |
|---|---|---|
| firefox71 | --- | fixed |
People
(Reporter: petr.sumbera, Assigned: petr.sumbera)
Details
Attachments
(1 file)
|
47 bytes,
text/x-phabricator-request
|
Details |
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:68.0) Gecko/20100101 Firefox/68.0
Steps to reproduce:
Bug 1512162 introduced into js/xpconnect/src/XPCWrappedNative.cpp following:
#if (__GNUC__ && __linux__ && __PPC64__ && _LITTLE_ENDIAN)
On Intel Solaris _LITTLE_ENDIAN is defined in /usr/include/sys/isa_defs.h without any value:
#define _LITTLE_ENDIAN
Thus I get following error:
error: operator '&&' has no right operand
| Assignee | ||
Updated•6 years ago
|
Component: Untriaged → XPConnect
OS: Unspecified → Other
Product: Firefox → Core
| Assignee | ||
Comment 1•6 years ago
|
||
| Assignee | ||
Updated•6 years ago
|
Keywords: checkin-needed
Pushed by apavel@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/69c4702714a8
Avoid _LITTLE_ENDIAN macro collision with Solaris empty definition r=bholley
Keywords: checkin-needed
Comment 3•6 years ago
|
||
| bugherder | ||
Status: UNCONFIRMED → RESOLVED
Closed: 6 years ago
status-firefox71:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla71
Updated•6 years ago
|
Assignee: nobody → petr.sumbera
You need to log in
before you can comment on or make changes to this bug.
Description
•