Bug 1579009 - Avoid _LITTLE_ENDIAN macro collision with Solaris empty definition r=bholley

Differential Revision: https://phabricator.services.mozilla.com/D44807